--- a/shop.css
+++ b/shop.css
@@ -185,8 +185,8 @@ a:hover{
 /* 2. HEADER
  ----------- */
  
- /* --- 2.1. Logo & Navigation --- */
- nav.navbar .navbar-brand{
+/* --- 2.1. Logo & Navigation --- */
+nav.navbar .navbar-brand{
 	margin-top: 0;
 	max-width: 350px;
 	display: inline-block
@@ -212,8 +212,8 @@ a:hover{
 }
 
 nav.navbar.bootsnav{
-	background-color: transparent !important;
-	border-bottom: none !important;
+	background-color: transparent;
+	border-bottom: none ;
 	z-index: 9999;
 }
 
@@ -234,26 +234,23 @@ nav.navbar.bootsnav ul.nav > li > a{
     font-weight: 700;
     text-transform: uppercase;
 	letter-spacing: 1px;
+	border-top: none;
 }
 
- nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li > a{
-    text-align: left !important;
+nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
+    text-align: left;
 	color: #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
     font-size: 14px;
     font-weight: 600;
     text-transform: capitalize;
 	letter-spacing: 1px;
-	border: none;
+	border-bottom: none;
 	transition: 0.5s;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
-	left: -50%;
-}
-
-nav.bootsnav .megamenu-fw .dropdown-menu {
-    left: 0 !important;
+	left: 0;
 }
 
 .attr-nav > ul > li.dropdown ul.dropdown-menu{
