--- a/bootsnav.css
+++ b/bootsnav.css
@@ -1311,7 +1311,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         background: #fff;
         z-index: 99;
         width: 280px;
-        height: 100% !important;
+        min-height: 100vh !important;
         left: -280px;
         top: 0;
         padding: 0;
