--- a/corporate.css
+++ b/corporate.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    04/03/2021
-Author:    Themewiz
+Last change:    31/08/2021
+Author:    creativemaze
 Primary use:    Corporate
 -------------------------------------------------------------------*/
 
@@ -112,7 +112,7 @@ ul{
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: center;
-	padding-top: 12px;
+	padding: 10px 10px 0;
 	line-height: 1.5em;
 }
 
@@ -315,7 +315,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas:hover,
 .right_info .fab:hover{
-	color: #111111;
+	opacity: 0.6;
 }
 
 .sub_width{
@@ -380,9 +380,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .head_btn a:hover{
-	background-color: transparent;
-	color: #ffffff;
-	border: 1px solid #ffffff;
+	color: #111111;
+	background-color: #ffffff;
+	border-color: #ffffff;
 }
 
 .sliderwrap{
@@ -396,7 +396,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	justify-content: flex-start;
 	align-items: center;
 	height: 100vh;
-	min-height: 800px;
+	min-height: 750px;
 }
 
 .slide__content{
@@ -406,8 +406,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	animation-duration: 2s;
-	animation-delay: 1s;
 	position: relative;
 	z-index: 1000;
 }
@@ -427,13 +425,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .header-title {
 	max-width: 650px;
 	display: block;
-	margin-left: 5vw;
+	margin-left: 10vw;
 	padding-right: 10px;
 }
 
 .header__content > div{
-	animation-duration: 2s;
-	animation-delay: 1s;
+	animation-duration: 1s;
+	animation-delay: 0.5s;
 	display: none;
 }
 
@@ -486,7 +484,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a:hover{
-	color: #009fff;
+	color: #111111;
 	background-color: #ffffff;
 	border-color: #ffffff;
 }
@@ -560,20 +558,19 @@ li.slick-active button{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.top_area{
+.corporate_col_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
-.corporate_col_area{
+.corporate_col_box{
 	max-width: 600px;
-	margin: auto;
-	padding: 0 15px;
+	padding-right: 25px;
 }
 
-.corporate_col_area h2{
+.corporate_col_box h2{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
 	font-weight: 500;
@@ -585,7 +582,7 @@ li.slick-active button{
 	margin-top: 0;
 }
 
-.corporate_col_area > p{
+.corporate_col_box > p{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
@@ -763,12 +760,18 @@ li.slick-active button{
 	padding: 0 25px;
 }
 
-.corporate_box{
-	max-width: 700px;
-	margin: auto;
+.bg_area{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
 }
 
-.corporate_box h2{
+.bg_box{
+	max-width: 700px;
+}
+
+.bg_box h2{
 	color: #ffffff;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
@@ -780,7 +783,7 @@ li.slick-active button{
 	margin-top: 0;
 }
 
-.corporate_box p{
+.bg_box p{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
@@ -805,7 +808,7 @@ li.slick-active button{
 	text-transform: uppercase;
     display: block;
     font-size: 13px;
-	font-weight: 700;
+	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
@@ -815,8 +818,8 @@ li.slick-active button{
 }
 
 .corporate_col_button a:hover{
-	color: #ffffff;
-	background-color: transparent;
+	color: #111111;
+	background-color: #ffffff;
 	border-color: #ffffff;
 }
 
@@ -916,15 +919,13 @@ li.slick-active button{
 
 .wide_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
-	overflow: hidden;
 }
 
 .wide_box{
 	max-width: 600px;
-	margin: 0 auto;
 	padding: 0 20px
 }
 
@@ -1018,12 +1019,12 @@ li.slick-active button{
 }
 
 .corporate_slide_box{
-	max-width: 800px;
+	max-width: 600px;
 	position: relative;
 	text-align: center;
 	overflow: hidden;
 	margin: auto;
-	padding-left: 20px;
+	padding-left: 30px;
 }
 
 .corporate_image{
@@ -1032,57 +1033,53 @@ li.slick-active button{
 	cursor: pointer;
 }
 
-.corporate_slide_box .corporate_image > img{
-	transition: ease-in-out 3.25s;
-}
-
-.corporate_slide_box:hover .corporate_image > img{
-	transform: scale(1.15);
-}
-
-.corporate_subject{
-	position: absolute;
-	bottom: 25px;
-	left: 20px;
+.featured_content{
+	overflow: hidden;
+	position: relative;
+	text-align: center;
+	padding-top: 10px;
 	max-width: 300px;
-	margin: auto;
-	background-color: #ffffff;
-	padding: 20px 24px;
 }
 
-.corporate_subject h4{
+.featured_content h3{
+	color: #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
 	font-weight: 600;
 	display: block;
-	color: #111111;
-	letter-spacing: 1px;
 	text-align: left;
+	letter-spacing: 1px;
 	line-height: 1.4em;
-	margin-top: 0;
 }
 
-.info_button a{
-	width: 110px;
-    color: #009fff;
-	border-bottom: solid 2px #009fff;
-    text-decoration: none;
-	text-transform: uppercase;
-    display: block;
-    font-size: 14px;
-	font-weight: 600;
-	font-family: 'Montserrat', Arial, sans-serif;
-    transition: 0.5s;
-    cursor: pointer;
+.featured_content p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	display: block;
+	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
+	padding: 10px 0 0;
+	line-height: 1.5em;
 }
 
-.info_button a:hover{
-	color: #111111;
+.area_button a{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 12px;
+	font-weight: 600;
+	letter-spacing: 1px;
+	text-align: left;
+	text-transform: uppercase;
+	display: block;
+	color: #009fff;
+	text-decoration: none;
+	width: 110px;
+	transition: 0.5s;
+    cursor: pointer;
 }
 
-.info_button a::after{
+.area_button a::after{
 	content: "\203A";
 	font-size: 20px;
 	margin: 0;
@@ -1094,13 +1091,16 @@ li.slick-active button{
 	position: relative;
 }
 
+.area_button a:hover{
+	color: #111111;
+}
 /* --- 3.5. Corporate Area Five --- */
 .corporate_area_five{
 	width: 100%;
-	margin: 0 0 9em;
+	margin: 0;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f8f9fa;
+	background-color: #f6f6f6;
 }
 
 .corporate_group_five{
@@ -1115,7 +1115,7 @@ li.slick-active button{
 .team_col{
 	flex: 25%;
 	width: 25%;
-	padding: 0 15px;
+	padding: 0 20px;
 }
 
 .team_box{
@@ -1142,6 +1142,12 @@ li.slick-active button{
 	width: 100%;
 	height: auto;
 	display: block;
+}
+
+.team_content{
+	padding-top: 15px;
+	padding-bottom: 15px;
+	text-align: center;
 }
 
 .team_box .team_image > img{
@@ -1172,52 +1178,59 @@ li.slick-active button{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
-	line-height: 1.5em
+	line-height: 1.5em;
+	padding-top: 16px;
+	padding-bottom: 16px;
+	margin-top: 0;
 }
 
 .team_icon{
-	max-width: 350px;
-	width: 100%;
-	margin: auto;
 	text-align: center;
-	padding: 15px 0;
+}
+
+.team_icon .fa-facebook-f{
+	padding: 10px 12px !important;
 }
 
 .team_icon .fab,
 .team_icon .fa{
-	font-size: 16px;
-	color: #009fff;
+	font-size: 14px;
+	color: #ffffff;
+	width: 35px;
+	height: 35px;
+	background-color: #009fff;
+	padding: 10px;
+	border: solid 1px #009fff;
+	border-radius: 50%;
 	display: inline-block;
-	transition: ease-in-out 0.5s;
-}
-
-.team_icon > a{
-	padding: 0 11px;
+	text-align: left;
+	margin-right: 7px;
 	transition: ease-in-out 0.5s;
 }
 
 .team_icon .fab:hover,
 .team_icon .fa:hover{
-	color: #111111;
+	color: #ffffff;
+	background-color: #111111;
+	border-color: #111111;
 }
 
 /* --- 3.6. Corporate Area Six --- */
 .corporate_area_six{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 350px;
-	height: 100%;
+	width: 100%;
+	min-height: 100px;
+	margin: 0;
 	background-color: #009fff;
 	margin: 0 0 9em;
 }
 
 .corporate_group_six{
 	max-width: 1400px;
-	margin: 0 auto;
+	margin: auto;
 	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px;
 }
 
 .count_area{
@@ -1230,44 +1243,53 @@ li.slick-active button{
 	flex: 25%;
 	width: 25%;
 	padding: 0 25px;
-	border-right: solid 1px #e0e0e0;
-	min-height: 350px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	min-height: 50px;
+}
+
+.count_col::before{
+	content: ".";
+	font-weight: 900;
+	font-size: 30px;
+	float: right;
+	text-align: right;
+	font-family: 'Montserrat' , Arial, sans-serif;
+	color: #ffffff;
+	margin-top: 30px;
+	position: relative;
+	left: 15%;
+	transform: translateX(-15%);
+}
+
+.fourth_circle::before{
+	content: ".";
+	display: none;
 }
 
 .count_box{
-	max-width: 350px;
+	max-width: 300px;
 	margin: auto;
-	padding: 0;
-	text-align: center;
-	background: transparent;
+	padding: 0 25px;
 }
 
-.count_box h4{
+.count_box h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 25px;
-	font-weight: 500;
+	font-size: 16px;
+	font-weight: 600;
 	display: block;
 	text-align: center;
-	color: #ffffff;
+	color: #111111;
 	letter-spacing: 1px;
+	text-transform: uppercase;
 }
 
 .count_box .counter{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 35px;
+	font-size: 30px;
 	font-weight: 700;
 	display: block;
 	text-align: center;
 	color: #f2f2f2;
 	letter-spacing: 1px;
-}
-
-.feature_border{
-	border-right: none;
 }
 
 /* --- 3.7. Corporate Area Seven --- */
@@ -1288,7 +1310,7 @@ li.slick-active button{
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 25px;
+	padding: 0 20px;
 }
 
 .blog_box{
@@ -1298,8 +1320,6 @@ li.slick-active button{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .blog_image{
@@ -1310,18 +1330,16 @@ li.slick-active button{
 .blog_area{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 12px;
-	padding-right: 12px;
-	padding-top: 12px;
-	padding-left: 12px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	padding-top: 5px;
+	padding-left: 5px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
-	padding: 25px 0;
 	text-align: left;
-	padding-left: 15px;
+	padding: 15px 0;
 	padding-right: 5px;
 }
 
@@ -1367,27 +1385,10 @@ li.slick-active button{
 	line-height: 1.4em;
 }
 
-.blog_content p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	padding: 10px 0;
-	line-height: 1.5em;
-}
-
-a.blog_btn:hover,
-.blog_title a:hover{
-	opacity: 0.6;
-}
-
 a.blog_btn{
 	max-width: 120px;	
-    color: #111111;
-	border-bottom: solid 2px #111111;
+    color: #009fff;
+	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1397,10 +1398,7 @@ a.blog_btn{
     transition: 0.5s;
     cursor: pointer;
 	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.2em;
-	padding-bottom: 3px;
-	padding-top: 10px;
+	text-align: left;
 }
 
 a.blog_btn::after{
@@ -1415,13 +1413,17 @@ a.blog_btn::after{
 	position: relative;
 }
 
+a.blog_btn:hover{
+	color: #111111;
+}
+
 /* --- 3.8. Corporate Area Eight --- */
 .corporate_area_eight{
 	width: 100%;
 	margin: 0 0 9em;
 	min-height: 400px;
-	padding: 6em 25px 7.5em;
-	background-color: #f8f9fa;
+	padding: 6em 25px 8em;
+	background-color: #f6f6f6;
 }
 
 .corporate_group_eight{
@@ -1450,7 +1452,7 @@ a.blog_btn::after{
 	padding: 35px 30px;
 	text-align: center;
 	display: block;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+	background-color: #ffffff;
 }
 
 .client_info img{
@@ -1468,7 +1470,7 @@ a.blog_btn::after{
 	font-size: 18px;
 	font-weight: 600;
 	display: block;
-	color: #009fff;
+	color: #111111;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: capitalize;
@@ -1485,7 +1487,7 @@ a.blog_btn::after{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #111111;
+	color: #009fff;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
@@ -1517,11 +1519,11 @@ a.blog_btn::after{
 .next_nav{
 	font-size: 14px;
 	transition: 0.6s ease;
-	background-color: transparent;
+	background: transparent;
 	width: auto;
 	display: inline-block;
 	overflow: hidden;
-	padding: 12px 18px;
+	padding: 10px 16px;
 	color: #111111;
 	cursor: pointer;
 	border: solid 1px #111111;
@@ -1541,40 +1543,17 @@ a.blog_btn::after{
 
 /* --- 3.9. Corporate Area Nine --- */
 .corporate_area_nine{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 300px;
-	height: 100%;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	margin-bottom: 2em;
-	padding: 3em 0;
-}
-
-.corporate_area_nine::before {
-	content: '';
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(24, 25, 34, 0.6);
+	max-width: 1280px;
+	margin: 0 auto 2em;
+	padding: 0 35px;
 }
 
 .corporate_group_nine{
-	position: relative;
-	z-index: 5;
-	padding: 0 25px;
-	max-width: 1200px;
-	margin: auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	background-color: #009fff;
+	padding: 40px 35px;
 }
 
 .col_head{
@@ -1601,14 +1580,14 @@ a.blog_btn::after{
 	margin-top: 0;
 }
 
-.form-row{
+.subscribe-row{
 	text-align: right;
 }
 
 .col_info input[type="email"]{
-	width: auto;
-	padding: 11px 20px 14px;
-	border: 0;
+	width: 350px;
+	padding: 12px 20px 14px;
+	border: solid 1px #e0e0e0;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	display: inline-block;
@@ -1622,24 +1601,26 @@ a.blog_btn::after{
 .col_info input[type="submit"]{
 	display: inline-block;
 	width: auto;
-	padding: 11px 20px;
+	padding: 11px 24px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: normal;
+	font-size: 16px;
+	font-weight: 500;
+	text-transform: uppercase;
 	margin: 0;
 	margin-left: -4px;
 	color: #ffffff;
 	border-radius: 0;
 	letter-spacing: 1px;
-	background-color: #009fff;
-	border: solid 1px #ffffff;
+	background-color: #111111;
+	border: solid 1px #111111;
 	transition: 0.5s;
 }
 
 .col_info input[type="submit"]:hover{
-	background-color: #ffffff;
-	color: #111111;
+	background: transparent;
+	color: #ffffff;
+	border-color: #ffffff;
 }
 
 /* 4. FOOTER
@@ -1695,12 +1676,12 @@ a.footer-brand img{
 	letter-spacing: 1px;
 	color: #111111;
 	text-align: left;
-	padding: 10px 0;
-	line-height: 1.6em;
+	padding: 20px 0;
+	line-height: 1.5em;
 }
 
 .footer_social{
-	margin: 30px 0;
+	margin: 12px 0;
 }
 
 .footer_social .fab,
@@ -1723,40 +1704,6 @@ a.footer-brand img{
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: center;
-}
-
-.address_box{
-	margin: 0;
-	text-align: center;
-	width: 100%;
-}
-
-.address_name{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 13px;
-	font-weight: normal;
-	letter-spacing: 1px;
-	text-transform: capitalize;
-	color: #111111;
-	display: block;
-	text-align: left;
-	line-height: 1.5em;
-}
-
-.address_box .fas{
-	color: #111111;
-	padding-right: 12px;
-}
-
-.address_phone{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 13px;
-	font-weight: normal;
-	letter-spacing: 1px;
-	text-transform: capitalize;
-	color: #111111;
-	display: block;
-	text-align: left;
 }
 
 .footer_col > h4{
@@ -1841,15 +1788,22 @@ a.footer-brand img{
 /* 5. RESPONSIVE
  ----------- */
 @media only screen and (max-width: 1024px){
+	.header__content{
+		height: auto;
+	}
+	
+	.slide__content{
+		height: auto;
+	}
+	
 	.corporate_col_one{
 		flex: 100%;
 		width: 100%;
-		max-width: 650px;
-		margin: auto;
+		max-width: 600px;
 	}
 	
 	.corporate_col_area{
-		padding-bottom: 30px;
+		margin-bottom: 30px;
 	}
 	
 	.corporate_icon_col{
@@ -1871,7 +1825,7 @@ a.footer-brand img{
 	}
 	
 	.wide_box{
-		padding-top: 40px;
+		margin-bottom: 40px;
 	}
 	
 	.team_col{
@@ -1884,6 +1838,28 @@ a.footer-brand img{
 		flex: 50%;
 		width: 50%;
 		margin-bottom: 40px;
+	}
+	
+	.col_info{
+		flex: 100%;
+		width: 100%;
+		margin-top: 0;
+	}
+	
+	.col_head{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.subscribe-row{
+		text-align: center;
+		margin-top: 35px;
+	}
+	
+	.col_head h3{
+		text-align: center;
+		width: 100%;
+		margin: auto;
 	}
 }
 
@@ -1968,6 +1944,10 @@ a.footer-brand img{
 		padding-top: 25px;
 	}
 	
+	.header-title{
+		margin-left: 5vw;
+	}
+	
 	.corporate_col_three{
 		flex: 100%;
 		width: 100%;
@@ -1980,28 +1960,12 @@ a.footer-brand img{
 	
 	.count_col{
 		flex: 50%;
-		width: 50%
+		width: 50%;
+		margin: 20px 0;
 	}
 	
-	.col_info{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.col_head{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.form-row{
-		text-align: center;
-		margin-top: 35px;
-	}
-	
-	.col_head h3{
-		text-align: center;
-		width: 100%;
-		margin: auto;
+	.second_circle::before{
+		display: none;
 	}
 	
 	.footer_col{
@@ -2015,9 +1979,9 @@ a.footer-brand img{
 		font-size: 30px;
 	}
 	
-	.corporate_col_area h2,
+	.corporate_col_box h2,
 	.corporate_head,
-	.corporate_box h2,
+	.bg_box h2,
 	.wide_box h2{
 		font-size: 30px;
 	}
@@ -2025,6 +1989,10 @@ a.footer-brand img{
 	.corporate_icon_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.corporate_slide_box{
+		padding-left: 0;
 	}
 	
 	.team_col{
@@ -2035,40 +2003,16 @@ a.footer-brand img{
 	.count_col{
 		flex: 100%;
 		width: 100%;
-		min-height: 250px;
+	}
+	
+	.third_circle::before,
+	.first_circle::before{
+		display: none;
 	}
 	
 	.blog_col{
 		flex: 100%;
 		width: 100%;
-	}
-	
-	.footer_col{
-		flex: 100%;
-		width: 100%;
-	}
-}
-
-@media only screen and (max-width: 420px){
-	.corporate_col_one,
-	.corporate_col_area,
-	.corporate_icon_col,
-	.blog_col{
-		padding-left: 0;
-		padding-right: 0;
-	}
-	
-	.corporate_slide_box{
-		padding-left: 0;
-	}
-	
-	.corporate_subject{
-		max-width: 200px;
-		padding: 15px;
-	}
-	
-	.corporate_subject h4{
-		font-size: 16px;
 	}
 	
 	.col_info input[type="email"]{
@@ -2082,24 +2026,29 @@ a.footer-brand img{
 		width: 100%;
 		margin-left: 0;
 	}
+	
+	.footer_col{
+		flex: 100%;
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width: 420px){
+	.corporate_col_one,
+	.corporate_col_box,
+	.corporate_col_area,
+	.corporate_icon_col,
+	.blog_col,
+	.wide_box{
+		padding: 0;
+	}
+	
+	.col_head h3{
+		font-size: 25px;
+	}
 }
 
 @media only screen and (max-width: 360px){
-	.corporate_subject{
-		max-width: 150px;
-		padding: 12px;
-		bottom: 8px;
-	}
-	
-	.corporate_subject h4{
-		font-size: 14px;
-	}
-	
-	.info_button a{
-		font-size: 12px;
-		width: 100px;
-	}
-	
 	.team_col{
 		padding: 0;
 	}
@@ -2108,9 +2057,5 @@ a.footer-brand img{
 @media only screen and (max-width: 320px){
 	.info_list > h3{
 		font-size: 14px;
-	}
-	
-	.col_head h3{
-		font-size: 25px;
 	}
 }
